# team_health_manager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/health/: __init__.py  cli.py  dataclass.py  execution_analyzer.py  statistics_generator.py  stats_manager.py  team_manager.py
src/health/cli/: __init__.py  base.py  execution.py  google.py  jira.py  pagerduty.py  sheets.py  slack.py  stats.py
src/health/clients/: ai.py  docs.py  drive.py  jira.py  pagerduty.py  sheets.py  slack.py
src/health/config/: credentials.py.template  epic_evaluation.txt  evaluation.txt  execution_report_template.jinja2  execution_stats.yaml  pagerduty.py.template  report_prompt.txt  slack.py.template  stats.yaml  team.yaml.template
src/health/renderers/: __init__.py  base.py
src/health/renderers/api/: base.py
src/health/renderers/cli/: __init__.py  base.py  jira_execution_cli_renderer.py
src/health/renderers/web/: __init__.py  base.py
tests/: test_cli.py
