[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-health-reporter"
version = "0.1.0"
description = "A CLI tool for reporting team health metrics"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
health = "health.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/health"] 